# options_visualizer

./: .eslintrc.json  .flake8  .gitignore  .pre-commit-config.yaml  C:\Users\TestUser\AppData\Roaming\options_visualizer\options_cache.db  CACHE_MANAGEMENT.md  Makefile  README.md  agent_notes.txt  app.py  index.html  main.py  offline_app.py  package.json  project_dump.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup.cfg  setup.py  setup_cron.sh  sync_cache_with_tickers.sh  test.py  test_fix.py  update_cache.py
backend/: __init__.py  config.py  main.py  options_data.py  requirements.txt  run.sh
debug/: chromewebdata.har  error_log.txt
frontend/: index.html
options_visualizer/: README.md  index.html  lint_and_format.sh  requirements.txt
options_visualizer_backend/: README.md  add_ticker.py  app.py  clean_cache.py  main.py  options_data.py  options_preprocessor.py  test_api.py
options_visualizer_web/: README.md  __init__.py  app.py  config.py  requirements.txt  test_options_fetch.py
project_dump/: project_dump_20250301_195650.txt  project_dump_20250301_200448.txt
python/: cache_manager.py  cache_utils.py  offline_app.py  options_data.py  requirements.txt  test_YF.py  test_preprocessor.py  yahoo_finance.py
static/: main.js
templates/: index.html
tests/: __init__.py  conftest.py  test_api.py  test_backend_frontend_interface.py  test_black_scholes.py  test_cache_manager.py  test_cache_thread.py  test_e2e.py  test_main.py  test_options_data.py  test_options_data_extended.py  test_python_black_scholes.py  test_yahoo_finance.py  (+1 more)
(+42 files in other folders)
